--- a/setup.cfg
+++ b/setup.cfg
@@ -47,7 +47,7 @@ default_branch = master
 default_instance = dev
 default_stack = kdl_dev
 gateway = ssh2.kdl.kcl.ac.uk
-host = autharch_sharc.kdl.kcl.ac.uk
+host = sharc2.kdl.kcl.ac.uk
 host_path = /project/containers
 project = autharch_sharc
 repository = https://github.com/kingsdigitallab/autharch_sharc.git
