--- a/requirements/base.in
+++ b/requirements/base.in
@@ -20,10 +20,12 @@ django-libsass==0.8
 # Django REST Framework
 djangorestframework==3.11.1  # https://github.com/encode/django-rest-framework
 django-cors-headers==3.5.0 # https://github.com/adamchainz/django-cors-headers
-
-# KDL
-# ------------------------------------------------------------------------------
 django-elasticsearch-dsl>=7.1,<7.2  # https://github.com/django-es/django-elasticsearch-dsl
 elasticsearch-dsl>=7.0.0,<8.0.0  # https://github.com/elastic/elasticsearch-dsl-py
 django-elasticsearch-dsl-drf>=0.20,<0.30  # https://django-elasticsearch-dsl-drf.readthedocs.io/en/latest/#id1
 django-ead>=0.3.1
+
+
+# Wagtail
+# ------------------------------------------------------------------------------
+wagtail>=2.9,<3 # https://github.com/wagtail/wagtail
