--- a/compose/production/traefik/traefik.yml
+++ b/compose/production/traefik/traefik.yml
@@ -23,8 +23,8 @@ certificatesResolvers:
 http:
   routers:
     web-router:
-      rule: "Host(`autharch_sharc.info`) || Host(`www.autharch_sharc.info`)"
-      
+      rule: "Host(`sharc2-dev.kdl.kcl.ac.uk`)"
+
       entryPoints:
         - web
       middlewares:
@@ -33,8 +33,8 @@ http:
       service: django
 
     web-secure-router:
-      rule: "Host(`autharch_sharc.info`) || Host(`www.autharch_sharc.info`)"
-      
+       rule: "Host(`sharc2-dev.kdl.kcl.ac.uk`)"
+
       entryPoints:
         - web-secure
       middlewares:
@@ -45,7 +45,7 @@ http:
         certResolver: letsencrypt
 
     web-media-router:
-      rule: "Host(`autharch_sharc.info`) && PathPrefix(`/media/`)"
+      rule: "Host(`sharc2-dev.kdl.kcl.ac.uk`) && PathPrefix(`/media/`)"
       entryPoints:
         - web-secure
       middlewares:
