--- a/requirements/base.in
+++ b/requirements/base.in
@@ -8,6 +8,7 @@ hiredis==1.1.0  # https://github.com/redis/hiredis-py
 
 # Django
 # ------------------------------------------------------------------------------
+
 django==3.0.10  # pyup: < 3.1  # https://www.djangoproject.com/
 django-environ==0.4.5  # https://github.com/joke2k/django-environ
 django-model-utils==4.0.0  # https://github.com/jazzband/django-model-utils
@@ -17,7 +18,10 @@ django-compressor==2.4  # https://github.com/django-compressor/django-compressor
 django-redis==4.12.1  # https://github.com/jazzband/django-redis
 django-formtools==2.2
 django-libsass==0.8
+
 # Django REST Framework
+# ------------------------------------------------------------------------------
+
 djangorestframework==3.11.1  # https://github.com/encode/django-rest-framework
 django-cors-headers==3.5.0 # https://github.com/adamchainz/django-cors-headers
 django-elasticsearch-dsl>=7.1,<7.2  # https://github.com/django-es/django-elasticsearch-dsl
@@ -28,7 +32,12 @@ django-ead>=0.7.0
 
 # Wagtail
 # ------------------------------------------------------------------------------
+
 wagtail>=2.9,<3 # https://github.com/wagtail/wagtail
+
+# KDL
+# ------------------------------------------------------------------------------
+django-kdl-wagtail>=0.9.0,<1.0
 
 # Whitenoise
 # ------------------------------------------------------------------------------
