--- a/kdl_stg.yml
+++ b/kdl_stg.yml
@@ -78,12 +78,12 @@ services:
       - '127.0.0.1:9300:9300'
     restart: unless-stopped
 
-  kibana:
-    image: kibana:7.5.1
-    depends_on:
-      - elasticsearch
-    env_file:
-      - ./.envs/.stg/.kibana
-    ports:
-      - '5601:5601'
-    restart: unless-stopped
+#  kibana:
+#    image: kibana:7.5.1
+#    depends_on:
+#      - elasticsearch
+#    env_file:
+#      - ./.envs/.stg/.kibana
+#    ports:
+#      - '5601:5601'
+#    restart: unless-stopped
