--- a/kdl_dev.yml
+++ b/kdl_dev.yml
@@ -73,9 +73,9 @@ services:
         - elasticsearch_data:/usr/share/elasticsearch/data:z
     env_file:
       - ./.envs/.dev/.elasticsearch
-    ports:
-      - '127.0.0.1:9200:9200'
-      - '127.0.0.1:9300:9300'
+#    ports:
+#      - '127.0.0.1:9200:9200'
+#      - '127.0.0.1:9300:9300'
     restart: unless-stopped
 
 #  kibana:
