--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -24,6 +24,7 @@ services:
       context: ../
       dockerfile: ./compose/production/django/Dockerfile
     image: autharch_sharc_liv_django
+    container_name: sharc_django
     volumes:
       - django_media:/app/autharch_sharc/media
     depends_on:
@@ -53,17 +54,36 @@ services:
   #      - django_media:/usr/share/nginx/media:ro
   #    restart: unless-stopped
 
+#  postgres:
+#    build:
+#      context: ../
+#      dockerfile: ./compose/production/postgres/Dockerfile
+#    image: postgres
+#    container_name: sharc_liv_postgres
+#    environment:
+#      POSTGRES_USER: ${POSTGRES_USER}
+#      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+#      PGDATA: /var/lib/postgresql/data/pgdata
+#    volumes:
+#      - postgres_data:/var/lib/postgresql/data:Z
+#      - postgres_data_backups:/backups:z
+#    env_file:
+#      - .env
+#    restart: unless-stopped
+
   postgres:
-    build:
-      context: ../
-      dockerfile: ./compose/production/postgres/Dockerfile
-    image: autharch_sharc_liv_postgres
-    volumes:
-      - postgres_data:/var/lib/postgresql/data:Z
-      - postgres_data_backups:/backups:z
+    image: postgres
+    restart: always
+    container_name: sharc_postgres
+    environment:
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      PGDATA: /var/lib/postgresql/data/pgdata
     env_file:
       - .env
-    restart: unless-stopped
+    volumes:
+      - ../volumes/postgres/data:/var/lib/postgresql/data/
+    expose:
+      - "5432"
 
   #  traefik:
   #    build:
@@ -84,7 +104,7 @@ services:
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.10.1 # Specify app required version
-    container_name: elasticsearch_liv
+    container_name: sharc_elasticsearch
     environment:
       - xpack.security.enabled=false
       - discovery.type=single-node
@@ -126,3 +146,10 @@ services:
 #    ports:
 #      - '5601:5601'
 #    restart: unless-stopped
+
+# Required - Openstack networking - note the indentation level
+networks:
+  default:
+    driver: bridge
+    driver_opts:
+      com.docker.network.driver.mtu: 1442
