--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -1,155 +1,90 @@
-version: '3'
 
-volumes:
-  django_media: { }
-  postgres_data: { }
-  postgres_data_backups: { }
-  traefik: { }
-  elasticsearch_data: { }
+name: 'sharc_openstack'
+
 
 services:
 
   # Required - Nginx Ingress
   nginx-proxy:
     image: nginxproxy/nginx-proxy
-    restart: always
+    restart: unless-stopped
     ports:
       - "80:80"
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
-      - django_media:/usr/share/nginx/media:ro
+
+  nginx:
+    build:
+      context: ..
+      dockerfile: ./compose/production/nginx/Dockerfile
+    restart: unless-stopped
+    expose:
+      - "8001"
+    volumes:
+      - ../volumes/django/static:/usr/share/nginx/static:ro
+      - ../volumes/django/media:/usr/share/nginx/media:ro
+    env_file:
+      - .env
+    environment:
+      VIRTUAL_HOST: ${DJANGO_ALLOWED_HOSTS}
+      VIRTUAL_PATH: "~^/(assets/|media/|static/|redist/|robots.txt)"
+      VIRTUAL_PROTO: http
+      VIRTUAL_PORT: 8001
+
 
   django:
     build:
       context: ../
       dockerfile: ./compose/production/django/Dockerfile
     image: autharch_sharc_liv_django
-    container_name: sharc_django
     volumes:
-      - django_media:/app/autharch_sharc/media
+      - ../volumes/django/static:/app/staticfiles
+      - ../volumes/django/media:/app/media
     depends_on:
       - postgres
-      - redis
       - elasticsearch
     env_file:
       - .env
     command: /start
     restart: unless-stopped
     expose:
-      - "5000"
+      - "8000"
     environment:
-      VIRTUAL_HOST: "sharc.kdl.kcl.ac.uk,localhost"
-      LETSENCRYPT_HOST: "sharc.kdl.kcl.ac.uk,localhost"
+      VIRTUAL_HOST: ${DJANGO_ALLOWED_HOSTS}
       VIRTUAL_PROTO: http
-      VIRTUAL_PORT: 5000
+      VIRTUAL_PORT: 8000
 
-  #  nginx:
-  #    build:
-  #      context: .
-  #      dockerfile: ./compose/production/nginx/Dockerfile
-  #    image: autharch_sharc_liv_nginx
-  #    depends_on:
-  #      - django
-  #    volumes:
-  #      - django_media:/usr/share/nginx/media:ro
-  #    restart: unless-stopped
-
-#  postgres:
-#    build:
-#      context: ../
-#      dockerfile: ./compose/production/postgres/Dockerfile
-#    image: postgres
-#    container_name: sharc_liv_postgres
-#    environment:
-#      POSTGRES_USER: ${POSTGRES_USER}
-#      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-#      PGDATA: /var/lib/postgresql/data/pgdata
-#    volumes:
-#      - postgres_data:/var/lib/postgresql/data:Z
-#      - postgres_data_backups:/backups:z
-#    env_file:
-#      - .env
-#    restart: unless-stopped
 
   postgres:
+    build:
+      context: ../
+      dockerfile: ./compose/production/postgres/Dockerfile
+    restart: unless-stopped
     image: postgres
-    restart: always
-    container_name: sharc_postgres
     environment:
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      #POSTGRES_USER: ${POSTGRES_USER}
+      #POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       PGDATA: /var/lib/postgresql/data/pgdata
+    healthcheck:
+      test: [ "CMD-SHELL", "sh -c 'pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}'" ]
+      timeout: 10s
+      interval: 5s
+      retries: 10
+    volumes:
+      - ../volumes/postgres_data:/var/lib/postgresql/data:Z
+      - ../volumes/postgres_data_backups:/backups:z
     env_file:
       - .env
-    volumes:
-      - ../volumes/postgres/data:/var/lib/postgresql/data/
     expose:
       - "5432"
 
-  #  traefik:
-  #    build:
-  #      context: .
-  #      dockerfile: ./compose/liv/traefik/Dockerfile
-  #    image: autharch_sharc_liv_traefik
-  #    depends_on:
-  #      - django
-  #    volumes:
-  #        - traefik:/etc/traefik/acme:z
-  #    ports:
-  #      - '127.0.0.1:8201:80'
-  #    restart: unless-stopped
-
-  redis:
-    image: redis:5.0
-    restart: unless-stopped
 
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.10.1 # Specify app required version
-    container_name: sharc_elasticsearch
-    environment:
-      - xpack.security.enabled=false
-      - discovery.type=single-node
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-      nofile:
-        soft: 65536
-        hard: 65536
-    cap_add:
-      - IPC_LOCK
-    volumes:
-      - elasticsearch_data:/usr/share/elasticsearch/data:z
-    expose:
-      - "9200"
-      - "9300"
+    image: elasticsearch:7.10.1
+    env_file:
+      - .env
+    ports:
+      - "9200:9200"
+      - "9300:9300"
     restart: unless-stopped
 
-
-#  elasticsearch:
-#    image: elasticsearch:7.10.1
-#    container_name: elasticsearch_liv
-#    volumes:
-#      - elasticsearch_data:/usr/share/elasticsearch/data:z
-#    env_file:
-#      - ./.envs/.liv/.elasticsearch
-#    ports:
-#      - '127.0.0.1:9200:9200'
-#      - '127.0.0.1:9300:9300'
-#    restart: unless-stopped
-
-#  kibana:
-#    image: kibana:7.5.1
-#    depends_on:
-#      - elasticsearch
-#    env_file:
-#      - ./.envs/.liv/.kibana
-#    ports:
-#      - '5601:5601'
-#    restart: unless-stopped
-
-# Required - Openstack networking - note the indentation level
-networks:
-  default:
-    driver: bridge
-    driver_opts:
-      com.docker.network.driver.mtu: 1442
