--- a/compose/production/nginx/default.conf
+++ b/compose/production/nginx/default.conf
@@ -1,6 +1,15 @@
 server {
-	listen       80;
-	server_name  localhost;
+    listen 8001;
+    server_name localhost;
+
+	location = /robots.txt {
+        alias /usr/share/nginx/robots.txt;
+    }
+
+    location /static/ {
+        alias /usr/share/nginx/static/;
+    }
+
 	location /media/ {
 		alias /usr/share/nginx/media/;
 	}
