--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     expose:
       - "8001"
     volumes:
-      - ../volumes/django/static:/usr/share/nginx/static:ro
+      - ../volumes/django/static:/usr/share/nginx/static:Z
       - ../volumes/django/media:/usr/share/nginx/media:ro
     env_file:
       - .env
