--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       context: ../
       dockerfile: ./compose/production/django/Dockerfile
     volumes:
-      - ../volumes/django/static:/app/staticfiles
+      - ../volumes/django/static:/app/staticfiles:Z
       - ../volumes/django/media:/app/media
     depends_on:
       - postgres
