added nginx-proxy volume

--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - "80:80"
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
+      - ../volumes/nginx-proxy/vhost.d:/etc/nginx/vhost.d:ro
+
 
   nginx:
     build:
