--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -24,6 +24,7 @@ services:
     volumes:
       - ../volumes/django/static:/usr/share/nginx/static:Z
       - ../volumes/django/media:/usr/share/nginx/media:ro
+      #- ../volumes/nginx/vue:/usr/share/nginx/vue:ro
     env_file:
       - .env
     environment:
@@ -51,7 +52,7 @@ services:
       - "8000:8000"
     environment:
       VIRTUAL_HOST: ${DJANGO_ALLOWED_HOSTS}
-      VIRTUAL_PATH: "/"
+      VIRTUAL_PATH: "~^/(api/|wagtail/|rct/)"
       VIRTUAL_PROTO: http
       VIRTUAL_PORT: 8000
 
@@ -91,3 +92,18 @@ services:
       - "9300:9300"
     restart: unless-stopped
 
+  vue:
+    build:
+      context: ..
+      dockerfile: ./compose/production/vue/Dockerfile
+    restart: unless-stopped
+    expose:
+      - "8080"
+
+    env_file:
+      - .env
+    environment:
+      VIRTUAL_HOST: ${DJANGO_ALLOWED_HOSTS}
+      VIRTUAL_PATH: "/"
+      VIRTUAL_PROTO: http
+      VIRTUAL_PORT: 8080
