--- a/compose/production/nginx/default.conf
+++ b/compose/production/nginx/default.conf
@@ -2,19 +2,57 @@ server {
     listen 8001;
     server_name localhost;
 
-	location = /robots.txt {
-        alias /usr/share/nginx/robots.txt;
+    # Serve Vue.js sharc app from root
+    root /usr/share/nginx/vue;
+    index index.html;
+
+    location / {
+        try_files $uri $uri/ /index.html;  # This handles Vue router history mode
     }
 
     location /static/ {
         alias /usr/share/nginx/static/;
     }
 
-	location /media/ {
-		alias /usr/share/nginx/media/;
-	}
+    location /media/ {
+        alias /usr/share/nginx/media/;
+    }
 
-	location /vue/ {
-		alias /usr/share/nginx/vue/;
-	}
+    location /exhibition {
+         # Add CORS preflight handling
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+            add_header 'Access-Control-Max-Age' 1728000;
+            add_header 'Content-Type' 'text/plain charset=UTF-8';
+            add_header 'Content-Length' 0;
+            return 204;
+        }
+
+        proxy_pass https://main-bvxea6i-yo3hw5otma6dk.uk-1.platformsh.site;
+        proxy_set_header Host main-bvxea6i-yo3hw5otma6dk.uk-1.platformsh.site;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /assets/ {
+         # Add CORS preflight handling
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+            add_header 'Access-Control-Max-Age' 1728000;
+            add_header 'Content-Type' 'text/plain charset=UTF-8';
+            add_header 'Content-Length' 0;
+            return 204;
+        }
+        
+        proxy_pass https://main-bvxea6i-yo3hw5otma6dk.uk-1.platformsh.site/assets/;
+        proxy_set_header Host main-bvxea6i-yo3hw5otma6dk.uk-1.platformsh.site;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 }
