--- a/compose/production/nginx/Dockerfile
+++ b/compose/production/nginx/Dockerfile
@@ -1,4 +1,4 @@
-FROM nginx:stable-alpine
+FROM nginx:stable
 
 COPY ./compose/production/nginx/default.conf /etc/nginx/conf.d/default.conf
 COPY ./compose/production/nginx/robots.txt /usr/share/nginx/robots.txt
