rct location added to nginx

--- a/compose/production/nginx/default.conf
+++ b/compose/production/nginx/default.conf
@@ -18,6 +18,20 @@ server {
         alias /usr/share/nginx/media/;
     }
 
+    location /rct/ {
+        # Remove the https:// from the Host header
+        proxy_pass https://rct.resourcespace.com/;
+        proxy_set_header Host rct.resourcespace.com;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # Add CORS headers if needed
+        add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+    }
+
     location /exhibition {
          # Add CORS preflight handling
         if ($request_method = 'OPTIONS') {
@@ -48,7 +62,7 @@ server {
             add_header 'Content-Length' 0;
             return 204;
         }
-        
+
         proxy_pass https://main-bvxea6i-yo3hw5otma6dk.uk-1.platformsh.site/assets/;
         proxy_set_header Host main-bvxea6i-yo3hw5otma6dk.uk-1.platformsh.site;
         proxy_set_header X-Real-IP $remote_addr;
