nginx server name now _

--- a/compose/production/nginx/default.conf
+++ b/compose/production/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 8001;
-    server_name *;
+    server_name _;
 
     # Serve Vue.js sharc app from root
     root /usr/share/nginx/vue;
