--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -41,8 +41,8 @@ services:
       context: ..
       dockerfile: ./compose/production/nginx/Dockerfile
     restart: unless-stopped
-    expose:
-      - "8001"
+    ports:
+      - "8001:8001"
     volumes:
       - ../volumes/django/static:/usr/share/nginx/static:Z
       - ../volumes/django/media:/usr/share/nginx/media:ro
