removed apache container

--- a/compose/production/nginx/default.conf
+++ b/compose/production/nginx/default.conf
@@ -39,7 +39,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    location /assets/ {
+    location /exhibition/assets/ {
          # Add CORS preflight handling
         if ($request_method = 'OPTIONS') {
             add_header 'Access-Control-Allow-Origin' '*';
